управление 1.0 без таймера

--- a/test_dm04.toml
+++ b/test_dm04.toml
@@ -11,12 +11,12 @@ count_tcp_serial = 1
 [[tcp_serial]]
 # с версии 0.17 указыавем полный путь к устройству
     mode = "TCP"        # or UDP - пока UDP не рассматриваем
-#    ip = "192.168.1.128"
-    ip = "127.0.0.1"     # при отладке на симуляторе - localhost
-#    ip = "192.168.0.4"    # при отладке на симуляторе Modbus Slave через внешний IP
+#    ip = "10.0.0.9"
+#    ip = "127.0.0.1"     # при отладке на симуляторе - localhost
+    ip = "192.168.1.128"    # при отладке на симуляторе Modbus Slave через внешний IP
     port = 502          # port used
-    time_loop = 1000
-    count_node = 1       # количество устройств на порту
+    time_loop = 50
+    count_node = 6        # количество устройств на порту
 # описание nede? как и в tty_serial
 # input registers – ИЭ05-1
     [[tcp_serial.set_node]]
@@ -52,7 +52,7 @@ count_tcp_serial = 1
         enable = true           # работает или нет
         address_id = 1          # адрес устройства на шине (1..247)
         command = 3             # команда запроса – запрос INPUT регитстров из устройства
-        address_data = 101      # адрес данных в устройстве
+        address_data = 31       # адрес данных в устройстве
         data_length = 1         # длинна запрашиваемых данных для дискрета 16 бит
         index_up = 35           # индекс на общей карте параметров
         type_par = 2            # Тип параметра получаемого от такт-у 1-AI, 2-DI
@@ -62,10 +62,20 @@ count_tcp_serial = 1
         enable = true           # работает или нет
         address_id = 1          # адрес устройства на шине (1..247)
         command = 3             # команда запроса – запрос INPUT регитстров из устройства
-        address_data = 103      # адрес данных в устройстве
+        address_data = 34       # адрес данных в устройстве
         data_length = 1         # длинна запрашиваемых данных для дискрета 16 бит
         index_up = 64            # индекс на общей карте параметров
         type_par = 2            # Тип параметра получаемого от такт-у 1-AI, 2-DI
+
+# кран – СЭ-07
+    [[tcp_serial.set_node]]
+        enable = true           # работает или нет
+        address_id = 1          # адрес устройства на шине (1..247)
+        command = 5             # команда запроса – запрос INPUT регитстров из устройства
+        address_data = 32768    # адрес данных в устройстве
+        data_length = 1         # длинна запрашиваемых данных для дискрета 16 бит
+        index_up = 101           # индекс на общей карте параметров
+        type_par = 3            # Тип параметра получаемого от такт-у 1-AI, 2-DI
 
 [[tcp_serial]]
 
